style.css
* {
    padding: 0;
    margin: 0;
    font-size: 12px;
    letter-spacing: 0.03em;
}

html,
body {
    max-width: 100%;
    overflow: unset;
    margin: 0;
    line-height: inherit;
    height: 100%;
}

#wrapper {
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
    overflow-x: hidden;
}

.btn-menubar {
    display: flex;
    flex-direction: column;
    -webkit-box-align: center;
    align-items: center;
    --tw-text-opacity: 1;
    color: #5f5f5f !important;
    border-radius: 0.375rem;
    cursor: pointer;
    font-weight: 600;
    width: auto;
    border-style: none;
    padding: 0.75rem;
    background-color: rgba(0, 0, 0, 0);
    font-size: 0.75rem;
    line-height: 1rem;
}

.menubar-footer {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    margin-top: 0px;
    margin-bottom: 0px;
    max-width: 100%;
    --tw-bg-opacity: 1;
    background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
    width: 480px;
    margin: 0rem auto;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
}

.navbar-wrap {
    --tw-bg-opacity: 1;
    background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
    --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
    display: block;
    position: fixed;
    max-width: 100%;
    width: 480px;
    margin-left: auto;
    margin-right: auto;
    left: 0px;
    right: 0px;
    bottom: 0px;
    z-index: 10;
    border-style: solid;
    border-width: 1px 0px 0px;
    --tw-border-opacity: 1;
    border-color: rgba(224, 224, 224, var(--tw-border-opacity));
}

.body-wrap {
    background: rgb(255, 255, 255);
    width: 480px;
    max-width: 100%;
    margin: 0px auto;
    height: 100%;
}

.body {
    display: flex;
    flex-direction: column;
    flex: 1 1 0%;
}

.body-header {
    background: #454e59 !important;
    padding: 5px;
    position: relative;
    width: 480px;
    max-width: 100%;
    z-index: 0;
}

.body-header-content {
    color: #fff;
    text-align: center;
    margin: 7px 0px;
}

.body-content {
    display: flex;
    -webkit-box-pack: center;
    justify-content: center;
    flex-direction: column;
    /* padding: 0px 16px; */
    padding-top: 15px
}

body {
    background-size: cover;
    background-color: #222831 !important;
}

.container {
    padding-left: 0px;
    padding-right: 0px;
}

.color-2 {
    color: #5f5f5f !important;
}

.menu-active {
    color: #f6be17 !important;
}

.color-1 {
    color: #454e59 !important;
}

.bg-second2 {
    background-color: #f6be17 !important;
}

.bg-primary1 {
    background-color: #454e59 !important;
}

.bold {
    font-style: bold;
}

.line {
    padding-bottom: 5px;
    border-bottom-style: solid;
    border-bottom-width: 3.1px;
    width: fit-content;
}

.miring {
    font-style: italic;
}

#tableProfile tr td {
    padding: 5px;
}

a { 
    color: #53b5d3 !important;
}

